# dengue-habm-santamarta

./: .gitignore  CSVWriter.cpp  CSVWriter.h  IMPLEMENTATION_SUMMARY.md  Main.cpp  Makefile  MyHuman.cpp  MyHuman.h  MyModel.cpp  MyModel.h  MyReadData.cpp  MyReadData.h  QUICKSTART.md  README.md  SEIModel.cpp  SEIModel.h  SENSITIVITY_ANALYSIS_README.md  SantaMartaChange.csv  Sensitivity_Analysis.ipynb  bello_grid.geojson  calibration_I0.py  calibration_bo.py  env  hi_activation_map.csv  locations.csv  mapa_nuevo_santa_marta.geojson  neighborhood_cells.csv  new_grid.csv  new_grid.geojson  new_santa_less.geojson  plots_calibration_I0.ipynb  pyproject.toml  results.xls  results_gridchange.csv  results_gridchange_10k_15.csv  run_sa_corrected.py  run_sensitivity.py  santa_marta_grid_relative.csv  summary_neighborhood_sizes.csv  temperatura-precipitacion-bello.csv  (+3 more)
Draft_DENGUE/: references.bib  template_new.tex
calib_I0_runs/: final_ensemble_I0_0004.csv  selection_summary.csv
props/: model.props  model_baseline.props
santa_marta_data/: Datos_2023_220.xlsx  Datos_2024_220.xlsx
test_run/: all_weekly_cases.csv  config_fit.csv  config_fit_summary.csv  meta.json  sensitivity_indices.csv
view/: Results.ipynb  build_incidence_for_calibration.ipynb  data processing.ipynb  hi_by_neighborhood_2023.csv  incidence_rate_comparison.csv  incidence_rates_santa_marta.csv  incidence_rates_santa_marta_bestwindow.csv  incidence_rates_santa_marta_full.csv  neighborhood_cells.csv  neighborhood_cells_copy.csv  results_100k.csv  results_100k_cop.csv  results_gridchange.csv  (+3 more)
(+53 files in other folders)
